--- a/info2180-project1-starter-master/index.html
+++ b/info2180-project1-starter-master/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -26,11 +28,12 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="female_yoga.png" alt="">
                 </div>
                 <div class="overview-hero-text">
-                    <h2>Live  your healthiest life now!</h2>
-                    <p>At INFO2180 Labs we’re committed to improving the lives of as many people as possible. One of the most important areas in which we’re striving to do that is health.</p>
+                    <h2>Live your healthiest life now!</h2>
+                    <p>At INFO2180 Labs we’re committed to improving the lives of as many people as possible. One of the
+                        most important areas in which we’re striving to do that is health.</p>
                 </div>
             </div>
         </section>
@@ -39,24 +42,28 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="artificial_intelligence.png" alt="">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
-                            <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
+                            <p>Learn how our innovations in machine learning are making a positive impact on healthcare.
+                            </p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="fitness_tracker.png" alt="">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
-                            <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
+                            <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed
+                                to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="healthy_lifestyle.png" alt="">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
-                            <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
+                            <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can
+                                help prevent chronic diseases and long-term illnesses.Take control of your life with
+                                these 5 simple steps.</p>
                         </div>
                     </div>
                 </div>
@@ -66,7 +73,8 @@
             <div class="container">
                 <div class="testing-desciption">
                     <h2>COVID-19 Testing Programme</h2>
-                    <p>Providing secure and connected COVID-19 screening and testing services to communities in collaboration with public health agencies and industry partners.</p>
+                    <p>Providing secure and connected COVID-19 screening and testing services to communities in
+                        collaboration with public health agencies and industry partners.</p>
                 </div>
                 <div class="cta">
                     <a href="#" class="btn">Learn More</a>
@@ -77,18 +85,24 @@
             <div class="container">
                 <h2>Recent Stories</h2>
                 <article>
-                    <img src="" alt="">
+                    <img src="man_suit.png" alt="">
                     <div class="article-body">
-                        <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
-                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
+                        <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.
+                        </h3>
+                        <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of
+                            people across the world to take on big healthcare challenges through groundbreaking research
+                            and developing tools that support better care.</p>
                         <p><a href="#">Read this Story</a></p>
                     </div>
                 </article>
                 <article>
-                    <img src="" alt="">
+                    <img src="covid_test.png" alt="">
                     <div class="article-body">
-                        <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h3>
-                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
+                        <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19
+                            Risk Screening and Testing</h3>
+                        <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of
+                            Education, will launch a pilot project intended to expand access to COVID-19 risk screening
+                            and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
                         <p><a href="#">Read this Story</a></p>
                     </div>
                 </article>
@@ -97,7 +111,8 @@
         <section class="newsletter">
             <div class="container">
                 <h3>Sign up for our newsletter</h3>
-                <p>Learn more about the latest developments from INFO2180 Labs’ health-related research and initiatives.</p>
+                <p>Learn more about the latest developments from INFO2180 Labs’ health-related research and initiatives.
+                </p>
                 <form action="#" method="post">
                     <div class="form-group">
                         <input type="email" name="email" id="email" placeholder="Enter your email">
@@ -110,8 +125,9 @@
     </main>
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2023, Javon Laing</p>
         </div>
     </footer>
 </body>
+
 </html>
